# evd_lemon

./: .gitignore  README.md  bar.py  barmanager.py  battery.py  color.py  main.py  mic.py  network.py  pyproject.toml  requirements.txt
evd_lemon/: __init__.py  bar.py  barmanager.py  battery.py  bluetooth.py  cli.py  linux.py
